--- a/native/vs2010/marisa-java.vcxproj
+++ b/native/vs2010/marisa-java.vcxproj
@@ -64,25 +64,25 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0-beta7\lib;$(IncludePath)</IncludePath>
+    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0\lib;$(IncludePath)</IncludePath>
     <OutDir>$(Configuration)-Win32\</OutDir>
     <IntDir>$(Configuration)-Win32\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0-beta7\lib;$(IncludePath)</IncludePath>
+    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0\lib;$(IncludePath)</IncludePath>
     <OutDir>$(Configuration)-Win64\</OutDir>
     <IntDir>$(Configuration)-Win64\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0-beta7\lib;$(IncludePath)</IncludePath>
+    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0\lib;$(IncludePath)</IncludePath>
     <OutDir>$(Configuration)-Win32\</OutDir>
     <IntDir>$(Configuration)-Win32\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0-beta7\lib;$(IncludePath)</IncludePath>
+    <IncludePath>$(JAVA_HOME)\include;$(JAVA_HOME)\include\win32;..\marisa-0.2.0\lib;$(IncludePath)</IncludePath>
     <OutDir>$(Configuration)-Win64\</OutDir>
     <IntDir>$(Configuration)-Win64\</IntDir>
   </PropertyGroup>
@@ -151,45 +151,45 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\algorithm.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\algorithm\sort.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\algorithm.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\algorithm\sort.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\io.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector.h" />
     <ClInclude Include="..\src\AgentNative.h" />
     <ClInclude Include="..\src\KeyNative.h" />
     <ClInclude Include="..\src\KeysetNative.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\agent.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\base.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\exception.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\mapper.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\reader.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\writer.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\cache.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\config.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\entry.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\header.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\history.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\key.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\louds-trie.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\range.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\state.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\tail.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\bit-vector.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\flat-vector.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\pop-count.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\precomputed-table.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\rank-index.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\vector.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\iostream.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\key.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\keyset.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\query.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\scoped-array.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\scoped-ptr.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\stdio.h" />
-    <ClInclude Include="..\marisa-0.2.0-beta7\lib\marisa\trie.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\agent.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\base.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\exception.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\io\mapper.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\io\reader.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\io\writer.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\cache.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\config.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\entry.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\header.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\history.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\key.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\louds-trie.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\range.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\state.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\tail.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\bit-vector.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\flat-vector.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\pop-count.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\precomputed-table.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\rank-index.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\vector.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\iostream.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\key.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\keyset.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\query.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\scoped-array.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\scoped-ptr.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\stdio.h" />
+    <ClInclude Include="..\marisa-0.2.0\lib\marisa\trie.h" />
     <ClInclude Include="..\src\QueryNative.h" />
     <ClInclude Include="..\src\TrieNative.h" />
   </ItemGroup>
@@ -197,16 +197,16 @@
     <ClCompile Include="..\src\AgentNative.cpp" />
     <ClCompile Include="..\src\KeyNative.cpp" />
     <ClCompile Include="..\src\KeysetNative.cpp" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\agent.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\mapper.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\reader.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\io\writer.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\louds-trie.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\trie\tail.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\bit-vector.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\grimoire\vector\precomputed-table.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\keyset.cc" />
-    <ClCompile Include="..\marisa-0.2.0-beta7\lib\marisa\trie.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\agent.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\io\mapper.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\io\reader.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\io\writer.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\louds-trie.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\trie\tail.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\bit-vector.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\grimoire\vector\precomputed-table.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\keyset.cc" />
+    <ClCompile Include="..\marisa-0.2.0\lib\marisa\trie.cc" />
     <ClCompile Include="..\src\QueryNative.cpp" />
     <ClCompile Include="..\src\TrieNative.cpp" />
   </ItemGroup>
