update version to 0.2.0-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>jp.marisa</groupId>
 	<artifactId>marisa-java</artifactId>
-	<version>0.2.0-beta7-1.0</version>
+	<version>0.2.0-1.0</version>
 	<packaging>jar</packaging>
 
 	<name>marisa-java</name>
